crates/toml_edit/tests/snapshots/invalid/string/bad-escape-5.stderr
TOML parse error at line 1, column 14
  |
1 | a = "a \\\\\ b"
  |              ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
